# iot-doorman

./: .gitignore  .pre-commit-config.yaml  README.md  iot-doorman.code-workspace
.github/workflows/: build_and_deploy.yaml
device/: justfile  platformio.ini
device/src/: main.cpp
server/: .dockerignore  Dockerfile  justfile  pyproject.toml
server/app/: app.py
server/app/static/: index.html
